--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^6.0.1",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "webcam-easy": "^1.0.5"
   }
 }
